# quantscribe

./: .env.example  .gitignore  LICENSE  README.md  app.py  packages.txt  pyproject.toml
data/chunks/: HDFC_BANK_annual_report_FY25_chunks.json  SBI_annual_report_FY25_chunks.json
docs/: specs.md
eval/gold_standard/: HDFC_FY25_capital_adequacy.json  HDFC_FY25_credit_risk.json  HDFC_FY25_liquidity_risk.json  HDFC_FY25_market_risk.json  HDFC_FY25_unsecured_lending.json  SBI_FY25_capital_adequacy.json  SBI_FY25_credit_risk.json  SBI_FY25_liquidity_risk.json
indices/active/: Axis_annual_report_FY25.faiss  Axis_annual_report_FY25_metadata.json  HDFC_BANK_annual_report_FY25.faiss  HDFC_BANK_annual_report_FY25_metadata.json  ICICI_annual_report_FY25.faiss  ICICI_annual_report_FY25_metadata.json  SBI_annual_report_FY25.faiss  SBI_annual_report_FY25_metadata.json
quantscribe/chunking/: __init__.py  narrative_chunker.py  table_chunker.py
quantscribe/etl/: mixed_page_handler.py  pdf_parser.py  pipeline.py
quantscribe/evaluation/: deepeval_eval.py  numerical_eval.py  ragas_eval.py
quantscribe/llm/: extraction_chain.py  peer_comparison.py  prompts.py
quantscribe/retrieval/: bank_index.py
quantscribe/schemas/: __init__.py  etl.py  evaluation.py  extraction.py  report.py
scripts/: kaggle_embed.py  kaggle_embed_notebook.py  run_etl.py  run_eval.py  run_full_pipeline.py  smoke_test.py  test_gemini.py
scripts/logs/: quantscribe.jsonl
tests/: test_etl_components.py  test_etl_pipeline.py  test_extraction.py  test_schemas_and_cleaner.py
